--- a/pandaagent.html
+++ b/pandaagent.html
@@ -20,7 +20,7 @@ Due October 10, 2017-->
 	<h2>Why Should <i>You</i> Come to the Amsterdam Theatre?</h2>
 	<!--picture of Aladdin-->
 	<figure>
-	<img src="Aladdin.jpg" alt="Aladdin Play" width="600" height="450" />
+	<img src="aladdin.jpg" alt="Aladdin Play" width="600" height="450" />
 	<br />
 	<figcaption>Aladdin Play at New Amsterdam Theatre</figcaption>
 	</figure>
